[package]
name = "surfer_bird"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.7", default-features = false }
surf = { version = "2.3", default-features = false, features = ["h1-client-rustls"] }
futures-lite = "1.12"
thiserror = "1.0"
serde_json = "1.0"
serde = "1.0"
anyhow = "1.0"

[dev-dependencies]
bevy = { version = "0.7", default-features = false, features = ["render", "bevy_winit"] }