[package]
name = "surfer_bird"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.7", default-features = false }
surf = { version = "2.3", default-features = false, features = ["default-client"] }
futures-channel = "0.3"
thiserror = "1.0"
serde_json = "1.0"
serde = "1.0"

# wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
surf = { version = "2.3", default-features = false, features = ["wasm-client"] } # has to match cynic

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surf = { version = "2.3", default-features = false, features = ["h1-client-rustls"] } # has to match cynic

[dev-dependencies]
bevy = { version = "0.7", default-features = false, features = ["render", "bevy_winit"] }